qt/quick/gen_qqmlengine.nim

import Qt5Quick_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Quick")
{.compile("gen_qqmlengine.cpp", cflags).}


type QQmlImageProviderBaseImageType* = cint
const
  QQmlImageProviderBaseImage* = 0
  QQmlImageProviderBasePixmap* = 1
  QQmlImageProviderBaseTexture* = 2
  QQmlImageProviderBaseInvalid* = 3
  QQmlImageProviderBaseImageResponse* = 4



type QQmlImageProviderBaseFlag* = cint
const
  QQmlImageProviderBaseForceAsynchronousImageLoading* = 1



type QQmlEngineObjectOwnership* = cint
const
  QQmlEngineCppOwnership* = 0
  QQmlEngineJavaScriptOwnership* = 1



import gen_qqmlengine_types
export gen_qqmlengine_types

import
  gen_qcoreevent,
  gen_qjsengine,
  gen_qmetaobject,
  gen_qnetworkaccessmanager,
  gen_qobject,
  gen_qobjectdefs,
  gen_qqmlabstracturlinterceptor,
  gen_qqmlcontext,
  gen_qqmlerror,
  gen_qqmlincubator,
  gen_qqmlnetworkaccessmanagerfactory,
  gen_qurl
export
  gen_qcoreevent,
  gen_qjsengine,
  gen_qmetaobject,
  gen_qnetworkaccessmanager,
  gen_qobject,
  gen_qobjectdefs,
  gen_qqmlabstracturlinterceptor,
  gen_qqmlcontext,
  gen_qqmlerror,
  gen_qqmlincubator,
  gen_qqmlnetworkaccessmanagerfactory,
  gen_qurl

type cQQmlImageProviderBase*{.exportc: "QQmlImageProviderBase", incompleteStruct.} = object
type cQQmlEngine*{.exportc: "QQmlEngine", incompleteStruct.} = object

proc fcQQmlImageProviderBase_imageType(self: pointer, ): cint {.importc: "QQmlImageProviderBase_imageType".}
proc fcQQmlImageProviderBase_flags(self: pointer, ): cint {.importc: "QQmlImageProviderBase_flags".}
proc fcQQmlImageProviderBase_delete(self: pointer) {.importc: "QQmlImageProviderBase_delete".}
proc fcQQmlEngine_new(): ptr cQQmlEngine {.importc: "QQmlEngine_new".}
proc fcQQmlEngine_new2(p: pointer): ptr cQQmlEngine {.importc: "QQmlEngine_new2".}
proc fcQQmlEngine_metaObject(self: pointer, ): pointer {.importc: "QQmlEngine_metaObject".}
proc fcQQmlEngine_metacast(self: pointer, param1: cstring): pointer {.importc: "QQmlEngine_metacast".}
proc fcQQmlEngine_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QQmlEngine_metacall".}
proc fcQQmlEngine_tr(s: cstring): struct_miqt_string {.importc: "QQmlEngine_tr".}
proc fcQQmlEngine_trUtf8(s: cstring): struct_miqt_string {.importc: "QQmlEngine_trUtf8".}
proc fcQQmlEngine_rootContext(self: pointer, ): pointer {.importc: "QQmlEngine_rootContext".}
proc fcQQmlEngine_clearComponentCache(self: pointer, ): void {.importc: "QQmlEngine_clearComponentCache".}
proc fcQQmlEngine_trimComponentCache(self: pointer, ): void {.importc: "QQmlEngine_trimComponentCache".}
proc fcQQmlEngine_importPathList(self: pointer, ): struct_miqt_array {.importc: "QQmlEngine_importPathList".}
proc fcQQmlEngine_setImportPathList(self: pointer, paths: struct_miqt_array): void {.importc: "QQmlEngine_setImportPathList".}
proc fcQQmlEngine_addImportPath(self: pointer, dir: struct_miqt_string): void {.importc: "QQmlEngine_addImportPath".}
proc fcQQmlEngine_pluginPathList(self: pointer, ): struct_miqt_array {.importc: "QQmlEngine_pluginPathList".}
proc fcQQmlEngine_setPluginPathList(self: pointer, paths: struct_miqt_array): void {.importc: "QQmlEngine_setPluginPathList".}
proc fcQQmlEngine_addPluginPath(self: pointer, dir: struct_miqt_string): void {.importc: "QQmlEngine_addPluginPath".}
proc fcQQmlEngine_addNamedBundle(self: pointer, name: struct_miqt_string, fileName: struct_miqt_string): bool {.importc: "QQmlEngine_addNamedBundle".}
proc fcQQmlEngine_importPlugin(self: pointer, filePath: struct_miqt_string, uri: struct_miqt_string, errors: struct_miqt_array): bool {.importc: "QQmlEngine_importPlugin".}
proc fcQQmlEngine_setNetworkAccessManagerFactory(self: pointer, networkAccessManagerFactory: pointer): void {.importc: "QQmlEngine_setNetworkAccessManagerFactory".}
proc fcQQmlEngine_networkAccessManagerFactory(self: pointer, ): pointer {.importc: "QQmlEngine_networkAccessManagerFactory".}
proc fcQQmlEngine_networkAccessManager(self: pointer, ): pointer {.importc: "QQmlEngine_networkAccessManager".}
proc fcQQmlEngine_setUrlInterceptor(self: pointer, urlInterceptor: pointer): void {.importc: "QQmlEngine_setUrlInterceptor".}
proc fcQQmlEngine_urlInterceptor(self: pointer, ): pointer {.importc: "QQmlEngine_urlInterceptor".}
proc fcQQmlEngine_addImageProvider(self: pointer, id: struct_miqt_string, param2: pointer): void {.importc: "QQmlEngine_addImageProvider".}
proc fcQQmlEngine_imageProvider(self: pointer, id: struct_miqt_string): pointer {.importc: "QQmlEngine_imageProvider".}
proc fcQQmlEngine_removeImageProvider(self: pointer, id: struct_miqt_string): void {.importc: "QQmlEngine_removeImageProvider".}
proc fcQQmlEngine_setIncubationController(self: pointer, incubationController: pointer): void {.importc: "QQmlEngine_setIncubationController".}
proc fcQQmlEngine_incubationController(self: pointer, ): pointer {.importc: "QQmlEngine_incubationController".}
proc fcQQmlEngine_setOfflineStoragePath(self: pointer, dir: struct_miqt_string): void {.importc: "QQmlEngine_setOfflineStoragePath".}
proc fcQQmlEngine_offlineStoragePath(self: pointer, ): struct_miqt_string {.importc: "QQmlEngine_offlineStoragePath".}
proc fcQQmlEngine_offlineStorageDatabaseFilePath(self: pointer, databaseName: struct_miqt_string): struct_miqt_string {.importc: "QQmlEngine_offlineStorageDatabaseFilePath".}
proc fcQQmlEngine_baseUrl(self: pointer, ): pointer {.importc: "QQmlEngine_baseUrl".}
proc fcQQmlEngine_setBaseUrl(self: pointer, baseUrl: pointer): void {.importc: "QQmlEngine_setBaseUrl".}
proc fcQQmlEngine_outputWarningsToStandardError(self: pointer, ): bool {.importc: "QQmlEngine_outputWarningsToStandardError".}
proc fcQQmlEngine_setOutputWarningsToStandardError(self: pointer, outputWarningsToStandardError: bool): void {.importc: "QQmlEngine_setOutputWarningsToStandardError".}
proc fcQQmlEngine_retranslate(self: pointer, ): void {.importc: "QQmlEngine_retranslate".}
proc fcQQmlEngine_contextForObject(param1: pointer): pointer {.importc: "QQmlEngine_contextForObject".}
proc fcQQmlEngine_setContextForObject(param1: pointer, param2: pointer): void {.importc: "QQmlEngine_setContextForObject".}
proc fcQQmlEngine_setObjectOwnership(param1: pointer, param2: cint): void {.importc: "QQmlEngine_setObjectOwnership".}
proc fcQQmlEngine_objectOwnership(param1: pointer): cint {.importc: "QQmlEngine_objectOwnership".}
proc fcQQmlEngine_quit(self: pointer, ): void {.importc: "QQmlEngine_quit".}
proc fQQmlEngine_connect_quit(self: pointer, slot: int) {.importc: "QQmlEngine_connect_quit".}
proc fcQQmlEngine_exit(self: pointer, retCode: cint): void {.importc: "QQmlEngine_exit".}
proc fQQmlEngine_connect_exit(self: pointer, slot: int) {.importc: "QQmlEngine_connect_exit".}
proc fcQQmlEngine_warnings(self: pointer, warnings: struct_miqt_array): void {.importc: "QQmlEngine_warnings".}
proc fQQmlEngine_connect_warnings(self: pointer, slot: int) {.importc: "QQmlEngine_connect_warnings".}
proc fcQQmlEngine_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QQmlEngine_tr2".}
proc fcQQmlEngine_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QQmlEngine_tr3".}
proc fcQQmlEngine_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QQmlEngine_trUtf82".}
proc fcQQmlEngine_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QQmlEngine_trUtf83".}
proc fQQmlEngine_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QQmlEngine_virtualbase_metacall".}
proc fcQQmlEngine_override_virtual_metacall(self: pointer, slot: int) {.importc: "QQmlEngine_override_virtual_metacall".}
proc fQQmlEngine_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QQmlEngine_virtualbase_event".}
proc fcQQmlEngine_override_virtual_event(self: pointer, slot: int) {.importc: "QQmlEngine_override_virtual_event".}
proc fQQmlEngine_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QQmlEngine_virtualbase_eventFilter".}
proc fcQQmlEngine_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QQmlEngine_override_virtual_eventFilter".}
proc fQQmlEngine_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QQmlEngine_virtualbase_timerEvent".}
proc fcQQmlEngine_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QQmlEngine_override_virtual_timerEvent".}
proc fQQmlEngine_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QQmlEngine_virtualbase_childEvent".}
proc fcQQmlEngine_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QQmlEngine_override_virtual_childEvent".}
proc fQQmlEngine_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QQmlEngine_virtualbase_customEvent".}
proc fcQQmlEngine_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QQmlEngine_override_virtual_customEvent".}
proc fQQmlEngine_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QQmlEngine_virtualbase_connectNotify".}
proc fcQQmlEngine_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QQmlEngine_override_virtual_connectNotify".}
proc fQQmlEngine_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QQmlEngine_virtualbase_disconnectNotify".}
proc fcQQmlEngine_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QQmlEngine_override_virtual_disconnectNotify".}
proc fcQQmlEngine_delete(self: pointer) {.importc: "QQmlEngine_delete".}


func init*(T: type QQmlImageProviderBase, h: ptr cQQmlImageProviderBase): QQmlImageProviderBase =
  T(h: h)
proc imageType*(self: QQmlImageProviderBase, ): QQmlImageProviderBaseImageType =

  QQmlImageProviderBaseImageType(fcQQmlImageProviderBase_imageType(self.h))

proc flags*(self: QQmlImageProviderBase, ): QQmlImageProviderBaseFlag =

  QQmlImageProviderBaseFlag(fcQQmlImageProviderBase_flags(self.h))

proc delete*(self: QQmlImageProviderBase) =
  fcQQmlImageProviderBase_delete(self.h)

func init*(T: type QQmlEngine, h: ptr cQQmlEngine): QQmlEngine =
  T(h: h)
proc create*(T: type QQmlEngine, ): QQmlEngine =

  QQmlEngine.init(fcQQmlEngine_new())
proc create*(T: type QQmlEngine, p: gen_qobject.QObject): QQmlEngine =

  QQmlEngine.init(fcQQmlEngine_new2(p.h))
proc metaObject*(self: QQmlEngine, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQQmlEngine_metaObject(self.h))

proc metacast*(self: QQmlEngine, param1: cstring): pointer =

  fcQQmlEngine_metacast(self.h, param1)

proc metacall*(self: QQmlEngine, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQQmlEngine_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QQmlEngine, s: cstring): string =

  let v_ms = fcQQmlEngine_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QQmlEngine, s: cstring): string =

  let v_ms = fcQQmlEngine_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc rootContext*(self: QQmlEngine, ): gen_qqmlcontext.QQmlContext =

  gen_qqmlcontext.QQmlContext(h: fcQQmlEngine_rootContext(self.h))

proc clearComponentCache*(self: QQmlEngine, ): void =
